All tables, models and operation up to table online users

--- a/ChatLoudServiceHost/App.config
+++ b/ChatLoudServiceHost/App.config
@@ -4,52 +4,42 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-  <system.web>
-    <compilation debug="true" />
-  </system.web>
-  <!-- When deploying the service library project, the content of the config file must be added to the host's 
-  app.config file. System.Configuration does not support config files for libraries. -->
   <system.serviceModel>
-    <diagnostics>
-      <messageLogging logEntireMessage="true" logMalformedMessages="true" logMessagesAtServiceLevel="true" logMessagesAtTransportLevel="true" />
-      <endToEndTracing propagateActivity="true" activityTracing="true" messageFlowTracing="true" />
-    </diagnostics>
-    <services>
-      <service name="ChatLoudService.Service1">
-        <endpoint address="" binding="basicHttpBinding" contract="ChatLoudService.IService1">
-          <identity>
-            <dns value="localhost" />
-          </identity>
-        </endpoint>
-        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
-        <host>
-          <baseAddresses>
-            <add baseAddress="http://localhost:8733/Design_Time_Addresses/ChatLoudService/Service1/" />
-          </baseAddresses>
-        </host>
-      </service>
-    </services>
     <behaviors>
       <serviceBehaviors>
-        <behavior>
-          <!-- To avoid disclosing metadata information, 
-          set the value below to false before deployment -->
-          <serviceMetadata httpGetEnabled="True" />
-          <!-- To receive exception details in faults for debugging purposes, 
-          set the value below to true.  Set to false before deployment 
-          to avoid disclosing exception information -->
+        <behavior name="mexBehave">
+          <serviceMetadata httpGetEnabled="true" />
           <serviceDebug includeExceptionDetailInFaults="True" />
         </behavior>
       </serviceBehaviors>
     </behaviors>
-  </system.serviceModel>  
+    <services>
+      <service name="ChatLoudService.Service1" behaviorConfiguration="mexBehave">
+        <endpoint address="Service1" binding="wsHttpBinding" contract="ChatLoudService.IService1"></endpoint>
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
+        <host>
+          <baseAddresses>
+            <add baseAddress="http://localhost:9011/" />
+          </baseAddresses>
+        </host>
+      </service>
+    </services>
+  </system.serviceModel>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
-    </providers>
+    <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6, Version=6.8.8.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d"></provider></providers>
   </entityFramework>
-  
+<system.data>
+    <DbProviderFactories>
+      <remove invariant="MySql.Data.MySqlClient" />
+      <add description=".Net Framework Data Provider for MySQL" invariant="MySql.Data.MySqlClient" name="MySQL Data Provider" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.10.6.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
+    </DbProviderFactories>
+  </system.data>
+<connectionStrings>
+    <add name="ChatLoud" connectionString="data source=DESKTOP-F7MJPL0\SQLEXPRESS;initial catalog=ChatLoud;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <system.diagnostics>
     <sources>
       <source name="System.ServiceModel.MessageLogging" switchValue="Warning, ActivityTracing">
@@ -72,4 +62,12 @@
       <add initializeData="App_tracelog.svclog" type="System.Diagnostics.XmlWriterTraceListener, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" name="ServiceModelTraceListener" traceOutputOptions="Timestamp" />
     </sharedListeners>
   </system.diagnostics>
-<connectionStrings><add name="ChatLoud" connectionString="data source=desktop-f7mjpl0\sqlexpress;initial catalog=ChatLoud;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings></configuration>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="MySql.Data" publicKeyToken="c5687fc88969c44d" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-6.10.6.0" newVersion="6.10.6.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
+</configuration>
