--- a/ChatLoudService/ChatLoudService.csproj
+++ b/ChatLoudService/ChatLoudService.csproj
@@ -53,17 +53,29 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IService1.cs" />
+    <Compile Include="Model\AspNetRole.cs" />
+    <Compile Include="Model\AspNetUser.cs" />
+    <Compile Include="Model\AspNetUserClaim.cs" />
+    <Compile Include="Model\AspNetUserLogin.cs" />
     <Compile Include="Model\Channel.cs" />
     <Compile Include="Model\Chat.cs" />
     <Compile Include="Model\ChatLoud.cs" />
     <Compile Include="Model\Client.cs" />
+    <Compile Include="Model\C__MigrationHistory.cs" />
+    <Compile Include="Model\GChat.cs" />
+    <Compile Include="Model\OnlineUser.cs" />
+    <Compile Include="Model\OnlineUserModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service1.cs" />
+    <Compile Include="Model\UserProfile.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
