--- a/ChatLoudService/ChatLoudService.csproj
+++ b/ChatLoudService/ChatLoudService.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service1.cs" />
     <Compile Include="Model\UserProfile.cs" />
+    <Compile Include="ServiceFault.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
